[tool.poetry]
name = "fastapiproject1"
version = "0.1.0"
description = ""
authors = ["Sayanc2000 <sayanc20002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
alembic = "^1.10.4"
hypercorn = "^0.14.3"
pandas = "^2.0.1"
httpx = "^0.24.0"
fastapi-cache2 = "^0.2.1"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
